After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 773291 - icon-info: do not scale pixbuf to width or height of 0
icon-info: do not scale pixbuf to width or height of 0
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-10-20 20:48 UTC by Ernestas Kulik
Modified: 2016-10-24 14:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
icon-info: do not scale pixbuf to width or height of 0 (1.18 KB, patch)
2016-10-20 20:48 UTC, Ernestas Kulik
committed Details | Review
test file (949 bytes, image/png)
2016-10-20 20:50 UTC, Ernestas Kulik
  Details

Description Ernestas Kulik 2016-10-20 20:48:43 UTC
If the file thumbnail is really narrow or short, the scaled width or
height can be 0, in which case gdk_pixbuf_scale_simple() returns NULL.
Comment 1 Ernestas Kulik 2016-10-20 20:48:48 UTC
Created attachment 338125 [details] [review]
icon-info: do not scale pixbuf to width or height of 0
Comment 2 Ernestas Kulik 2016-10-20 20:50:59 UTC
Created attachment 338126 [details]
test file

This file is now an actor in two bugs. Triggering a file conflict with this file would cause warnings and no thumbnail would appear.
Comment 3 Carlos Soriano 2016-10-24 13:59:56 UTC
Review of attachment 338125 [details] [review]:

Was kinda hard to follow this code path... I wonder if all of this interaction is really necesary :/ I can see some shared code repeated and obsoleted.
But nothing to do with your patch, which is fine :)
Thanks!
Comment 4 Ernestas Kulik 2016-10-24 14:21:50 UTC
Attachment 338125 [details] pushed as 34a48ba - icon-info: do not scale pixbuf to width or height of 0