icon-info: do not scale pixbuf to width or height of 0

If the file thumbnail is really narrow or short, the scaled width or
height can be 0, in which case gdk_pixbuf_scale_simple() returns NULL.

https://bugzilla.gnome.org/show_bug.cgi?id=773291